--- a/app/index.html
+++ b/app/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,8 +6,6 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-
-
   </head>
 
   <body>
@@ -25,14 +24,27 @@
     </nav>
 
     <main class="content">
-      <h2 itemprop="name">Pesto</h2>
       <article itemscope itemtype="http://schema.org/Recipe">
-        <img
-          src="img/pesto.jpg"
-          alt="a bold of pesto with a wooden spoon in it"
-        />
+        <figure>
+          <img
+            alt="a bowl of pesto with a wooden spoon in it"
+            src="img/pesto.jpg"
+            srcset="
+              img/pesto/pesto_iodywc_c_scale,w_380.jpg   600w,
+              img/pesto/pesto_iodywc_c_scale,w_780.jpg  1024w,
+              img/pesto/pesto_iodywc_c_scale,w_1380.jpg 2048w
+            "
+            width="100%"
+            height="auto"
+          />
+          <figcaption>
+            Classic, simple basil pesto recipe with fresh basil leaves, pine
+            nuts, garlic, Romano or Parmesan cheese, extra virgin olive oil, and
+            salt and pepper.
+          </figcaption>
+        </figure>
 
-        
+        <h2 itemprop="name">Pesto</h2>
 
         <p itemprop="description">
           A sauce of crushed basil leaves, pine nuts, garlic, Parmesan cheese,
